# RosPlayground

./: README.md
src/custom_marker_viz/: CMakeLists.txt  package.xml
src/custom_marker_viz/res/: 3d-model_3.dae
src/imu_display_imitation/: CMakeLists.txt  package.xml  plugin_description.xml
src/imu_display_imitation/include/imu_display_imitation/: pole_display.h  pole_visual.h
src/imu_display_imitation/src/: pole_display.cpp  pole_visual.cpp
src/imu_display_tutorial/: CMakeLists.txt  package.xml  plugin_description.xml
src/imu_display_tutorial/docs/: rviz_classes.md  shape_code.h
src/imu_display_tutorial/include/imu_display_tutorial/: imu_display.h  imu_visual.h
src/imu_display_tutorial/scripts/: send_test_msgs.py
src/imu_display_tutorial/src/: imu_display.cpp  imu_visual.cpp
src/ogre_test/: CMakeLists.txt  OgreTest.cpp  package.xml
